tests/ui/const-generics/exhaustive-value.stderr
error[E0277]: the trait bound `(): Foo<N>` is not satisfied
  --> $DIR/exhaustive-value.rs:262:5
   |
LL |     <() as Foo<N>>::test()
   |     ^^^^^^^^^^^^^^^^^^^^ the trait `Foo<N>` is not implemented for `()`
   |
   = help: the following other types implement trait `Foo<N>`:
             <() as Foo<0>>
             <() as Foo<1>>
             <() as Foo<2>>
             <() as Foo<3>>
             <() as Foo<4>>
             <() as Foo<5>>
             <() as Foo<6>>
             <() as Foo<7>>
           and 248 others

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
